# chronograph

./: Cargo.toml  LICENSE  README.md
migrations/: 001_init.sql
src/: aggregator.rs  app.rs  autostart.rs  db.rs  icon.rs  idle.rs  main.rs  single_instance.rs  tracker.rs  tray.rs
