[package]
name = "chronograph"
version = "0.1.0"
edition = "2024"
description = "Windows activity tracker — logs active window usage time locally."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
once_cell = "1"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "migrate", "macros"] }

x-win = "5"
sysinfo = "0.38"

[target.'cfg(windows)'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.34"
egui_extras = "0.34"
wineventhook = "0.11"
tray-icon = "0.22"
auto-launch = "0.6"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
